<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsCommander</string>
    <string name="app_version">v1.0</string>
    <string name="action_settings">Settings</string>
<!--  	 All for later use		 -->    
<!--     <string name="activate_listener">Activate listener for sms</string> -->
<!--     <string name="deactivate_listener">Deactivate listener for sms</string> -->
<!--     <string name="activate_text">Test</string> -->
<!-- 	<string name="sms_magicword">Pussylover</string> -->
    <string name="welcome_text">SMS CMD Services</string>
        <string name="uiTitle">Commander</string>
    <string name="uiText_magicword">Standard Magicword: Trollmode</string>
    <string name="preferences">Preferences</string>
        
    <string name="pref_category_trollmode">Trollmode Settings</string>
    
    <string name="pref_magicword_title">Magicword</string>
    <string name="pref_magicword_sum">The magicword that will activate TrollMode.</string>
    <string name="pref_magicword_default">Trollmode</string>
    
    <string name="sound_summary">What sound to play</string>
    <string name="sound">Sound</string>
    
    <string-array name="soundNames">
        <item>Script Check Complete</item>
        <item>Homer Simpson - Nacho Man</item>
        <item>Whohahaha</item>
        <item>Eric Cartman - Goddammit</item>
        <item>Dog barking</item>
        <item>Donkey</item>
        <item>Orgasm</item>
        <item>Orgasm 2</item>
    </string-array>

    <string-array name="soundValues">
        <item>script_check</item>
        <item>homer_nacho_man</item>
        <item>whohaha</item>
        <item>goddammit</item>
        <item>dog</item>
        <item>donkey</item>
        <item>orgasm</item>
        <item>orgasm2</item>
    </string-array>
    
</resources>
